[gd_scene load_steps=43 format=3 uid="uid://cioby1n27ryow"]

[ext_resource type="Script" uid="uid://cur2e4n2p0pxn" path="res://enemies/skeleton/skeleton.gd" id="1_drsv4"]
[ext_resource type="Texture2D" uid="uid://dhg56c1lwor7w" path="res://assets/Skeleton_Axe/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_02_Yellow_Idle.png" id="2_riuq3"]
[ext_resource type="Script" uid="uid://bv74cjk6dv3j5" path="res://components/damageable_component.gd" id="3_es8qe"]
[ext_resource type="Script" uid="uid://dmurjk74xkpdn" path="res://characters/states/character_state_machine.gd" id="4_4e564"]
[ext_resource type="Script" uid="uid://buxdijsixt086" path="res://enemies/skeleton/patrol.gd" id="5_mew8a"]
[ext_resource type="Script" uid="uid://buvdd3fgh12nl" path="res://characters/states/dead_state.gd" id="6_8bh25"]
[ext_resource type="Script" uid="uid://b76n5nhjrhsom" path="res://characters/states/hit_state.gd" id="7_p4nc8"]
[ext_resource type="Script" uid="uid://8es5ffb4n0v1" path="res://enemies/skeleton/pursue.gd" id="8_583g5"]
[ext_resource type="Script" uid="uid://eb3e3o2d6d5x" path="res://enemies/skeleton/attack.gd" id="9_5xsdm"]
[ext_resource type="Texture2D" uid="uid://3le6hlxbv7n0" path="res://assets/Skeleton_Axe/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_02_Yellow_Attack1.png" id="10_f7cdn"]
[ext_resource type="Texture2D" uid="uid://bm8s43ddaqvhj" path="res://assets/Skeleton_Axe/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_02_Yellow_Die.png" id="11_pi0qw"]
[ext_resource type="Texture2D" uid="uid://dbx4fl4f4d2hd" path="res://assets/Skeleton_Axe/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_02_Yellow_Hurt.png" id="12_ym5ls"]
[ext_resource type="Texture2D" uid="uid://ufb0ajwqyft0" path="res://assets/Skeleton_Axe/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_02_Yellow_Walk.png" id="13_f47vg"]
[ext_resource type="Script" uid="uid://b04ble633sv7g" path="res://characters/damage/damage_area.gd" id="14_drsv4"]
[ext_resource type="Script" uid="uid://ce1llr8pnomm1" path="res://characters/states/state_debug_label.gd" id="15_jrkgk"]
[ext_resource type="Script" uid="uid://cv5rhtqh14anw" path="res://components/env_check_component.gd" id="16_riuq3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5q4d"]
size = Vector2(27, 47)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p8ro6"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t7nm1"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2v32d"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5q7td"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wg02f"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a1dpt"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_5q7td"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5q7td")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_wg02f")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_a1dpt")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wg02f"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1dpt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p8ro6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5q7td"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n0m5m"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x1a2a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_60n1n"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_otoki"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xm4ec"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_l7c3s"]
states/Start/position = Vector2(199, 100)
states/attack/node = SubResource("AnimationNodeAnimation_p8ro6")
states/attack/position = Vector2(707, 100)
states/death/node = SubResource("AnimationNodeAnimation_t7nm1")
states/death/position = Vector2(299, 169)
states/hit/node = SubResource("AnimationNodeAnimation_2v32d")
states/hit/position = Vector2(512, 204)
states/patrol/node = SubResource("AnimationNodeBlendSpace1D_5q7td")
states/patrol/position = Vector2(519, 3)
transitions = ["Start", "patrol", SubResource("AnimationNodeStateMachineTransition_wg02f"), "patrol", "hit", SubResource("AnimationNodeStateMachineTransition_a1dpt"), "patrol", "death", SubResource("AnimationNodeStateMachineTransition_p8ro6"), "hit", "death", SubResource("AnimationNodeStateMachineTransition_5q7td"), "hit", "patrol", SubResource("AnimationNodeStateMachineTransition_n0m5m"), "patrol", "attack", SubResource("AnimationNodeStateMachineTransition_x1a2a"), "attack", "patrol", SubResource("AnimationNodeStateMachineTransition_60n1n"), "attack", "hit", SubResource("AnimationNodeStateMachineTransition_otoki"), "attack", "death", SubResource("AnimationNodeStateMachineTransition_xm4ec")]
graph_offset = Vector2(-234, -5)

[sub_resource type="Animation" id="Animation_2v32d"]
length = 1.12501
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_riuq3")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_p8ro6"]
resource_name = "attack"
length = 1.37501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_f7cdn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_5q7td"]
resource_name = "death"
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_pi0qw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_wg02f"]
resource_name = "hit"
length = 0.625013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_ym5ls")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_t7nm1"]
resource_name = "idle"
length = 0.750013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_riuq3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_a1dpt"]
resource_name = "walk"
length = 1.12501
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("13_f47vg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1.00001),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5q7td"]
_data = {
&"RESET": SubResource("Animation_2v32d"),
&"attack": SubResource("Animation_p8ro6"),
&"death": SubResource("Animation_5q7td"),
&"hit": SubResource("Animation_wg02f"),
&"idle": SubResource("Animation_t7nm1"),
&"walk": SubResource("Animation_a1dpt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wg02f"]
size = Vector2(32, 63.5)

[node name="Skeleton" type="CharacterBody2D" node_paths=PackedStringArray("components")]
collision_layer = 4
script = ExtResource("1_drsv4")
components = [NodePath("AttackArea"), NodePath("EnvCheckComponent")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 8.5)
shape = SubResource("RectangleShape2D_j5q4d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_riuq3")
hframes = 8

[node name="DamageableComponent" type="Node" parent="."]
script = ExtResource("3_es8qe")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character", "animation_tree")]
script = ExtResource("4_4e564")
initial_state = NodePath("Pursue")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
metadata/_custom_type_script = "uid://dmurjk74xkpdn"

[node name="Patrol" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_mew8a")
metadata/_custom_type_script = "uid://bc302qypp4ibv"

[node name="Dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("6_8bh25")
can_move = false
metadata/_custom_type_script = "uid://bc302qypp4ibv"

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable")]
script = ExtResource("7_p4nc8")
damageable = NodePath("../../DamageableComponent")
metadata/_custom_type_script = "uid://bc302qypp4ibv"

[node name="Pursue" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_583g5")
metadata/_custom_type_script = "uid://bc302qypp4ibv"

[node name="Attack" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_5xsdm")
metadata/_custom_type_script = "uid://bc302qypp4ibv"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_l7c3s")
anim_player = NodePath("../AnimationPlayer")
parameters/patrol/blend_position = 0.64935

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5q7td")
}

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitoring = false
script = ExtResource("14_drsv4")
initial_monitoring_state = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(31, 0.25)
shape = SubResource("RectangleShape2D_wg02f")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -45.0
offset_top = -50.0
offset_right = 58.0
offset_bottom = -27.0
text = "State:"
script = ExtResource("15_jrkgk")
state_machine = NodePath("../CharacterStateMachine")

[node name="EnvCheckComponent" type="Node2D" parent="."]
script = ExtResource("16_riuq3")
metadata/_custom_type_script = "uid://cv5rhtqh14anw"

[node name="floor_check" type="RayCast2D" parent="EnvCheckComponent"]
position = Vector2(18, -7)

[node name="wall_check" type="RayCast2D" parent="EnvCheckComponent"]
position = Vector2(18, -7)
target_position = Vector2(12, 0)

[node name="player_check" type="RayCast2D" parent="EnvCheckComponent"]
position = Vector2(-16, 0)
rotation = -0.001484
target_position = Vector2(1000, 0)
collision_mask = 3

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Hit" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_body_entered"]
